--- a/.gitignore
+++ b/.gitignore
@@ -1,114 +1,44 @@
-# Maven
+# ===============================================
+# Ficheros de Build y Output de Maven
+# ===============================================
+# Esta es la regla más importante. Ignora todas las carpetas "target",
+# que es donde Maven guarda los .jar, .war, .ear y todas las clases compiladas.
 target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
-.mvn/wrapper/maven-wrapper.jar
-
-# Java
-*.class
+ 
+# Ficheros de log y temporales
 *.log
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-hs_err_pid*
-
-# IDEs
+*.tmp
+*.orig
+ 
+# ===============================================
+# Ficheros de IDE (Entornos de Desarrollo)
+# ===============================================
+ 
+# VS Code (como el que usas)
+.vscode/
+ 
+# IntelliJ
 .idea/
-*.iws
 *.iml
 *.ipr
-.vscode/
-.settings/
+*.iws
+ 
+# Eclipse
 .project
 .classpath
-.metadata/
-.recommenders/
-
-# Eclipse
-bin/
-tmp/
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-
-# NetBeans
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-
-# Spring Boot
-*.pid
-*.seed
-*.pid.lock
-
-# Logs
-logs/
-*.log
-application-*.log
-
-# OS Files
+.settings/
+ 
+# ===============================================
+# Ficheros del Sistema Operativo
+# ===============================================
+ 
+# macOS
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
+ 
+# Windows
 Thumbs.db
-Desktop.ini
-
-# WebSphere specific
-*.ear
-*.war (in deployment folders)
-was-liberty/
-liberty-work/
-workarea/
-
-# Properties files with sensitive data (uncomment if needed)
-# *.properties
-# !demo.properties
-# !application.properties
-
-# Test reports
-TEST-*.xml
-surefire-reports/
-failsafe-reports/
-
-# Coverage reports
-jacoco.exec
-target/site/jacoco/
-
-# Temporary files
-*.tmp
-*.temp
+desktop.ini
+ 
+# Ficheros temporales de editores (Vim, etc.)
 *~
-
-# Node.js (if using frontend tools)
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Generated sources
-generated-sources/
-generated-test-sources/
-
-# Maven Wrapper (uncomment to exclude)
-# .mvn/wrapper/maven-wrapper.jar
-# .mvn/wrapper/maven-wrapper.properties
-# mvnw
-# mvnw.cmd
+*.swp
